Sun Nov 16 22:47:53 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tao/Synch_Invocation.cpp: 

	  Fixed a compile error due to wrong exception macro usage. 

Sun Nov 16 18:04:05 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/operation_details.i:

	  Removed 'return' from the last line of two methods returning void.

Sun Nov 16 16:49:33 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* orbsvcs/orbsvcs/FaultTolerance/FT_Service_Callbacks.cpp:
	* tao/ORB_Core.cpp:
	* tao/Synch_Invocation.cpp:

	  Fix for [BUG 1384]. Please see

	  http://deuce.doc.wustl.edu/bugzilla/show_bug.cgi?id=1384

	  for details. The crux of the problem is whether the FTORB
	  infrastructure should do a reinvocation when it receives a
	  TRANSIENT over the wire. Opinions were widely different on
	  this. We finally took the opinion of Jon Biggar who said this
	  was okay. 

Sun Nov 16 12:40:15 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tests/Portable_Interceptors/Bug_1559/interceptors.cpp:

	  In receive_request_service_context (), return if we receive a
	  shutdown call. If not the test will not shutdwon cleanly.

Sun Nov 16 12:32:02 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

        * tao/operation_details.h:
	* tao/operation_details.i:

	  Added two new methods reset_request_service_info () and
	  reset_reply_service_info () which resets the buffer within the
	  underlying service context list.
	
	* tao/Invocation_Adapter.cpp:

	  If the call on a traget object returned a
	  TAO::TAO_INVOKE_RESTART, reset the buffer of the service context
	  list cached within the operation_details before restarting the
	  invocation on a new target. This should fix [BUG1559].

	* tao/Sequence.cpp:
	* tao/Sequence.h:
	* tao/Sequence_T.cpp:
	  
	  The _dellocate_buffer () implementations just released the
	  buffer and set the buffer to be null. The length_, release_ and
	  maximum_ (not for bounded sequences) need to be reset too. If